<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/jon_wick"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_poster"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/txt_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="26dp"
        android:layout_below="@+id/txt_title"
        android:layout_toEndOf="@+id/img_poster"
        android:maxLines="2"
        android:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/txt_imdb_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_overview"
        android:layout_marginTop="5dp"
        android:layout_marginStart="26dp"
        android:layout_toRightOf="@id/img_poster"
        android:maxLines="1"
        android:text="@string/text_imdb" />

    <TextView
        android:id="@+id/txt_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_imdb_home"
        android:layout_marginStart="26dp"
        android:layout_toRightOf="@id/img_poster"
        android:text="@string/text_genre"/>

</RelativeLayout>