<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:src="@drawable/poster_john_wick"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_below="@+id/img_cover"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="13dp"
                android:src="@drawable/jon_wick" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_cover"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/img_poster"
                android:fontFamily="@font/maven_pro_medium"
                android:text="@string/text_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_toEndOf="@+id/img_poster"
                android:fontFamily="@font/maven_pro_medium"
                android:paddingTop="10dp"
                android:textSize="16sp"
                android:text="@string/text_genre"/>

        </RelativeLayout>
        <RelativeLayout
            android:background="@drawable/rc_circle_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/overview"
                android:fontFamily="@font/maven_pro_medium"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/txt_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overview"
                android:fontFamily="@font/maven_pro_medium"
                android:padding="10dp"
                android:text="@string/lorem_ipsum"
                android:textColor="#fff"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_below="@+id/txt_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/maven_pro_medium"
                    android:text="@string/runtime"
                    android:textSize="18sp"
                    android:textColor="#fff"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/maven_pro_medium"
                    android:text="@string/release"
                    android:textSize="18sp"
                    android:textColor="#fff"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_2"
                android:layout_below="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_runtime"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maven_pro_medium"
                    android:text="@string/text_runtime"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_year"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maven_pro_medium"
                    android:text="@string/text_release"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_3"
                android:layout_below="@+id/ll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maven_pro_medium"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maven_pro_medium"
                    android:textStyle="bold"
                    android:text="@string/language"
                    android:textSize="18sp"
                    android:textColor="#fff"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/imdb"
                    android:textSize="18sp"
                    android:textColor="#fff"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_4"
                android:layout_below="@+id/ll_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_language"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maven_pro_medium"
                    android:text="@string/text_language"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_imdb"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maven_pro_medium"
                    android:text="@string/text_imdb"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>